--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,27 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@200;400;700&display=swap');
+
 .app {
   width: 500px;
-  margin: 1em auto;
+  margin: 0 auto;
   text-align: center;
-}
+  background-color: whitesmoke;
+  padding: 2rem;
+  font-family: "Spartan", sans-serif;
+  border-radius: 3rem;
+ }
 
 .app img {
   max-width: 150px;
+}
+.todo-title{
+  font-size: 2rem;
+  font-weight: 700;
+  color: rgb(22, 175, 175);
+  text-shadow:.2rem .2rem 0 #00000050;
+  margin-bottom: 2rem;
 }
 .todo-form{
 
 }
 .todo-form input{
-  
+  width: 100%;
+  height: 3rem;
+  margin:2rem 0;
+  display: block;
+  box-sizing: border-box;
+  font-size:1.5rem;
+  padding: 0 1rem;
+  border-radius: .5rem;
+  border:none;
 }
 .todo-counter{
-  
+  font-size: 1.2rem;
+  margin:2rem 0;
 }
 .todo-list{
   
 }
 .todo-item{
-
+  margin:1rem 0;
+padding:1rem .5rem;
+background-color: rgb(232, 232, 232);
+border-radius: .5rem;
+display: flex;
+align-items: center;
+box-shadow:2px 2px 5px #00000020;
+transition: 200ms ease-in-out;
+}
+.todo-item--checked{
+  background-color: rgb(202, 202, 202);
+  transition: 200ms ease-in-out;
 }
 .todo-item__checkbox{
-
+  appearance: none;
+  background-color: white;
+width: 1rem;
+height: 1rem;
+border:none;
+border-radius: 50%;
+transition: 200ms ease-in-out;
+}
+.todo-item__checkbox:checked{
+  appearance: none;
+  background-color:rgb(22, 175, 175);;
+width: 1rem;
+height: 1rem;
+border:none;
+border-radius: 50%;
+transition: 200ms ease-in-out;
 }
